--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,20 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 			<version>2.5.7</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 			<version>8.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.6.0</version>
 		</dependency>
 
 		<!-- Testing -->
